--- a/src/themes/_theme-mixins.scss
+++ b/src/themes/_theme-mixins.scss
@@ -242,6 +242,9 @@
       color: $dark-text;
     }
 
+    .ws-mat-yellow-text{
+      color: #f5d58d;
+    }
     .ws-mat-primary-lite-background-on-day {
       background-color: $colorBackground;
     }
